rust/surrealdb-query-builder/src/statements/snapshots/surrealdb_query_builder__statements__define_function__tests__define_function-2.snap
---
source: surrealdb-query-builder/src/statements/define_function.rs
expression: fn_statement.fine_tune_params()
---
DEFINE FUNCTION get_it($first: bool, $last: string, $birthday: string) {
LET $person = $_param_00000001;

RETURN $person;
};
