rust/surrealdb-query-builder/src/statements/snapshots/surrealdb_query_builder__statements__define_function__tests__define_function-3.snap
---
source: surrealdb-query-builder/src/statements/define_function.rs
expression: fn_statement.get_bindings()
---
[
    Binding {
        param: "_param_3a546f9b",
        value: Strand(
            Strand(
                "43",
            ),
        ),
        original_inline_name: "_param_3a546f9b",
        raw_string: "'43'",
        description: None,
    },
]
