rust/surrealdb-query-builder/src/statements/snapshots/surrealdb_query_builder__statements__define_function__tests__define_function.snap
---
source: surrealdb-query-builder/src/statements/define_function.rs
expression: fn_statement.to_raw().build()
---
DEFINE FUNCTION get_it($first: bool, $last: string, $birthday: string) {
LET $person = '43';

RETURN $person;
};
